# BioGraphRAG

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_REACT.md  DEPLOY_REACT.md  Dockerfile  Dockerfile.backend  Dockerfile.minimal  README.md  README_FREE.md  README_REACT.md  SECURITY.md  app.py  docker-compose.yml  packages.txt  pyproject.toml  railway.toml  requirements-minimal.txt  requirements-streamlit.txt  requirements.txt  run_app.sh
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
backend/: .env.example  .gitignore  Dockerfile  app.py  railway.toml  requirements.txt  simple_app.py
configs/: default.yaml  local_free.yaml  realtime.yaml
data/local/: sample_graph.json
docs/: RELEASE_NOTES_v0.1.0.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vercel.json
frontend/src/: App.jsx
frontend/src/components/: ExampleQuestions.jsx  GraphVisualization.jsx  GreekDecorations.jsx  Header.jsx  ResultsPanel.jsx  SearchBar.jsx
frontend/src/styles/: App.css
infra/docker/: Dockerfile.api
src/qa/: answer.py
src/rag/: pipeline.py
src/retrieval/: expand_local.py  expand_realtime.py  realtime_apis.py  vector_store.py  vector_store_local.py
src/utils/: aws.py  config.py
